--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,7 @@ body {
     left: 50%;
     transform: translate(-50%, -50%);
     color: #fff;
-    font-family: "Source Sans Pro";
+    font-family: "Arial";
     font-size: 5em;
     font-weight: 900;
     -webkit-user-select: none;
